# chat

./: Cargo.toml  docker-compose.yaml
client/: README.md  chat.html  script.js
gateways/api/: Cargo.toml
gateways/api/src/: server.rs  settings.rs
gateways/api/src/routes/: messages.rs
message-gateway/: Cargo.toml
message-gateway/src/: chat.rs  lib.rs  main.rs  session.rs  settings.rs  telemetry.rs
message-gateway/src/actors/: chat.rs  conn.rs  mod.rs  session.rs
message-gateway/static/: index.html
messaging/: Cargo.toml
messaging/api/: Cargo.toml
messaging/api/src/: main.rs  settings.rs  telemetry.rs
messaging/api/src/routes/: message.rs  sessions.rs
messaging/infrastructure/: Cargo.toml
messaging/infrastructure/src/: lib.rs  pg.rs  telemetry.rs
messaging/migrations/: Cargo.toml
messaging/migrations/files/: V1__initial.sql
messaging/migrations/src/: main.rs
sessions/: Cargo.toml
sessions/proto/: server.proto
sessions/src/: lib.rs  main.rs  settings.rs
