[package]
name = "message_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4.2"
actix-web-actors = "4.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
log = "0.4"
config = "0.13"
serde-aux = "3"
tracing-opentelemetry = "0.18"
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }
opentelemetry = { version = "0.18" }
tokio = { version = "1.21" }