[workspace]
members = [
    "api",
    "infrastructure",
]

[workspace.dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
log = "0.4"
config = "0.13"
serde-aux = "3"
tracing-opentelemetry = "0.18"
opentelemetry = { version = "0.18" }