[workspace]
members = [
    "api",
    "infrastructure",
    "migrations"
]
default-members = ["api"]

[workspace.dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
log = "0.4"
config = "0.13"
serde-aux = "3"
tracing-opentelemetry = "0.18"
opentelemetry = { version = "0.18" }
tokio = { version = "1.21" }
thiserror = "1"
eyre = { version = "0.6" }

deadpool-postgres = "0.10"
tokio-postgres = { version = "0.7.7" }
uuid = { version = "0.8", features = ["v4"] }