[package]
name = "messaging_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.2"
actix-web-actors = "4.1"
reqwest = "0.11"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
log = { workspace = true }
config = { workspace = true }
serde-aux = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true, features = ["rt-tokio"] }

infrastructure = { path = "../infrastructure" }