[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refinery = { version = "0.8.6", features = ["tokio-postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
eyre = { workspace = true }
tokio-postgres = { workspace = true }